--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -19,53 +19,129 @@
 </div>
 <div class="row">
     <div class="col-2 bg-white mt-3">
-        <ul class="nav nav-pills flex-column">
+        <ul class="nav nav-pills flex-column" role="tablist">
             <li class="nav-item">
-                <a class="nav-link leftNav active" data-tab="#admin">Администратор</a>
+                <a class="nav-link leftNav active" role="tab" href="#1">Администратор</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link leftNav" data-tab="#user">Пользователь</a>
+                <a class="nav-link leftNav" role="tab" href="#2">Пользователь</a>
             </li>
         </ul>
+        <div class="tab-content">
+            <div role="tabpanel" class="tab-pane pillAdmin active" id="1">
+                activity
+            </div>
+            <div role="tabpanel" class="tab-pane pillUser" id="2">
+                deactive
+            </div>
+        </div>
     </div>
     <div class="col bg-light mt-3">
         <h2>Панель администратора</h2>
         <nav>
-            <ul class="nav nav-tabs mt-3">
+            <ul class="nav nav-tabs mt-3" role="tablist">
                 <li class="nav-item">
-                    <a class="nav-link rightNav active" data-tab="#admin">Пользователи</a>
+                    <a class="nav-link rightNav active" role="tab" href="#admin">Пользователи</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link rightNav" data-tab="#create">Новый пользователь</a>
+                    <a class="nav-link rightNav" role="tab" href="#create">Новый пользователь</a>
                 </li>
             </ul>
         </nav>
-        <div class="card" id="admin">
-            <div class="card-header">
-                <h5>Все пользователи</h5>
+        <div class="tab-content">
+            <div role="tabpanel" class="tab-pane tabAdmin active" id="admin">
+                <div class="card">
+                    <div class="card-header">
+                        <h5>Все пользователи</h5>
+                    </div>
+                    <div class="card-body">
+                        <table class="table table-hover">
+                            <thead>
+                            <tr>
+                                <th class="text-center">ID</th>
+                                <th class="text-center">Имя</th>
+                                <th class="text-center">Фамилия</th>
+                                <th class="text-center">Возраст</th>
+                                <th class="text-center">Зарплата</th>
+                                <th class="text-center">Почта</th>
+                                <th class="text-center">Логин</th>
+                                <th class="text-center">Пароль</th>
+                                <th class="text-center">Права</th>
+                                <th class="text-center">Редактировать</th>
+                                <th class="text-center">Удалить</th>
+                            </tr>
+                            </thead>
+                            <tbody class="userList">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
-            <div class="card-body">
-                <table class="table table-hover">
-                    <thead>
-                    <tr>
-                        <th class="text-center">ID</th>
-                        <th class="text-center">Имя</th>
-                        <th class="text-center">Фамилия</th>
-                        <th class="text-center">Возраст</th>
-                        <th class="text-center">Зарплата</th>
-                        <th class="text-center">Почта</th>
-                        <th class="text-center">Права</th>
-                        <th class="text-center">Редактировать</th>
-                        <th class="text-center">Удалить</th>
-                    </tr>
-                    </thead>
-                    <tbody class="userList">
-                    </tbody>
-                </table>
+            <div role="tabpanel" class="tab-pane tabCreate" id="create">
+                <div class="card">
+                    <div class="card-header">
+                        <h5>Добавить пользователя</h5>
+                    </div>
+                    <form>
+                        <div class="card-body-col-10">
+                            <div class="form-group mx-auto" style="width: 350px;">
+                                <input type="hidden" class="form-control" id="idNew" placeholder="Введите ID">
+                            </div>
+                            <div class="form-group mx-auto" style="width: 350px;">
+                                <div class="text-center"><label for="firstNameNew"><b>Имя</b></label></div>
+                                <input type="text" class="form-control" id="firstNameNew"
+                                       placeholder="Введите имя">
+                            </div>
+                            <div class="form-group mx-auto" style="width: 350px;">
+                                <div class="text-center"><label for="lastNameNew"><b>Фамилия</b></label></div>
+                                <input type="text" class="form-control" id="lastNameNew"
+                                       placeholder="Введите фамилию">
+                            </div>
+                            <div class="form-group mx-auto" style="width: 350px;">
+                                <div class="text-center"><label for="ageNew"><b>Возраст</b></label></div>
+                                <input type="text" class="form-control" id="ageNew"
+                                       placeholder="Введите возраст">
+                            </div>
+                            <div class="form-group mx-auto" style="width: 350px;">
+                                <div class="text-center"><label for="salaryNew"><b>Зарплата</b></label></div>
+                                <input type="text" class="form-control" id="salaryNew"
+                                       placeholder="Введите зарплату">
+                            </div>
+                            <div class="form-group mx-auto" style="width: 350px;">
+                                <div class="text-center"><label for="emailNew"><b>Почта</b></label></div>
+                                <input type="email" class="form-control" id="emailNew"
+                                       placeholder="Введите почту">
+                            </div>
+                            <div class="form-group mx-auto" style="width: 350px;">
+                                <div class="text-center"><label for="usernameNew"><b>Логин</b></label></div>
+                                <input type="text" class="form-control" id="usernameNew"
+                                       placeholder="Введите логин">
+                            </div>
+                            <div class="form-group mx-auto text-center" style="width: 350px;">
+                                <label for="passwordNew"><b>Пароль</b></label>
+                                <input type="password" class="form-control" id="passwordNew"
+                                       placeholder="Введите пароль">
+                            </div>
+                            <div class="form-group mx-auto" style="width: 350px;">
+                                <div class="text-center"><label for="rolesNew"><b>Права</b></label></div>
+                                <select class="custom-select" size="2" name="select_role" id="rolesNew">
+                                    <option value="1">ADMIN</option>
+                                    <option value="2">USER</option>
+                                </select>
+                            </div>
+                            <div class="form-group mt-3 mx-auto" style="width: 258px;">
+                                <button type="submit" class="btn btn-success mx-auto">Добавить нового пользователя
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
+
 <form class="editForm">
     <div class="modal fade" id="editModal"
          tabindex="-1"
@@ -105,6 +181,14 @@
                     <div class="form-group mx-auto text-center" style="width: 350px;">
                         <label for="Email" class="col-form-label"><b>Почта</b></label>
                         <input type="text" class="form-control" id="Email" name="email">
+                    </div>
+                    <div class="form-group mx-auto text-center" style="width: 350px;">
+                        <label for="Username" class="col-form-label"><b>Логин</b></label>
+                        <input type="text" class="form-control" id="Username">
+                    </div>
+                    <div class="form-group mx-auto text-center" style="width: 350px;">
+                        <label for="Password" class="col-form-label"><b>Пароль</b></label>
+                        <input type="password" class="form-control" id="Password">
                     </div>
                     <div class="mx-auto" style="width: 350px;">
                         <div class="text-center"><label for="roles"><b>Права</b></label>
@@ -171,6 +255,14 @@
                         <input type="text" class="form-control" id="delEmail"
                                name="email" readonly>
                     </div>
+                    <div class="form-group mx-auto text-center" style="width: 350px;">
+                        <label for="delUsername" class="col-form-label"><b>Логин</b></label>
+                        <input type="text" class="form-control" id="delUsername" readonly>
+                    </div>
+                    <div class="form-group mx-auto text-center" style="width: 350px;">
+                        <label for="delPassword" class="col-form-label"><b>Пароль</b></label>
+                        <input type="password" class="form-control" id="delPassword" readonly>
+                    </div>
                     <div class="mx-auto" style="width: 350px;">
                         <div class="text-center"><label for="delRoles"><b>Права</b></label>
                         </div>
@@ -185,26 +277,15 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary"
-                            data-dismiss="modal">Закрыть</button>
-                    <input type="submit" class="btn btn-danger btnSubmit" value="Удалить"
+                            data-dismiss="modal">Закрыть
+                    </button>
+                    <input type="submit" class="btn btn-danger btnDelSubmit" value="Удалить"
                            readonly>
                 </div>
             </div>
         </div>
     </div>
 </form>
-
-
-<div class="card" id="create">
-    <div class="card-header">
-        <h5>Добавить пользователя</h5>
-    </div>
-        <div class="card-body-col-10">
-            New Userrr
-        </div>
-</div>
-
-
 
 <script src="https://code.jquery.com/jquery-3.3.1.js"
         crossorigin="anonymous"></script>
