--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 <div class="row bg-dark" style="height: 50px;">
-    <div class="col text-white ml-3 mt-2" style="font-size: 15pt;"><span class="font-weight-bold"></span>
+    <div class="col text-white ml-3 mt-2" style="font-size: 15pt;">
+        <span class="font-weight-bold" th:text="${#authentication.getName()}" id="principal"></span>
         <span class="ms-1"> с правами доступа:</span>
         <span></span>
     </div>
@@ -58,7 +59,6 @@
                                         <th class="text-center">Возраст</th>
                                         <th class="text-center">Зарплата</th>
                                         <th class="text-center">Почта</th>
-                                        <th class="text-center">Логин</th>
                                         <th class="text-center">Пароль</th>
                                         <th class="text-center">Права</th>
                                         <th class="text-center">Редактировать</th>
@@ -103,13 +103,8 @@
                                     </div>
                                     <div class="form-group mx-auto" style="width: 350px;">
                                         <div class="text-center"><label for="emailNew"><b>Почта</b></label></div>
-                                        <input type="email" class="form-control" id="emailNew"
+                                        <input type="text" class="form-control" id="emailNew"
                                                placeholder="Введите почту">
-                                    </div>
-                                    <div class="form-group mx-auto" style="width: 350px;">
-                                        <div class="text-center"><label for="usernameNew"><b>Логин</b></label></div>
-                                        <input type="text" class="form-control" id="usernameNew"
-                                               placeholder="Введите логин">
                                     </div>
                                     <div class="form-group mx-auto text-center" style="width: 350px;">
                                         <label for="passwordNew"><b>Пароль</b></label>
@@ -119,12 +114,12 @@
                                     <div class="form-group mx-auto" style="width: 350px;">
                                         <div class="text-center"><label for="rolesNew"><b>Права</b></label></div>
                                         <select class="custom-select" size="2" name="select_role" id="rolesNew">
-                                            <option value="1">ADMIN</option>
-                                            <option value="2">USER</option>
+                                            <option value="admin">ADMIN</option>
+                                            <option value="user">USER</option>
                                         </select>
                                     </div>
                                     <div class="form-group mt-3 mx-auto" style="width: 258px;">
-                                        <button type="submit" class="btn btn-success mx-auto">Добавить нового
+                                        <button type="submit" class="btn btn-success mx-auto btnCreate">Добавить нового
                                             пользователя
                                         </button>
                                     </div>
@@ -150,9 +145,7 @@
                                 <th>Возраст</th>
                                 <th>Зарплата</th>
                                 <th>Почта</th>
-                                <th>Логин</th>
                                 <th>Пароль</th>
-                                <th>Права</th>
                                 <th>Права</th>
                             </tr>
                             </thead>
@@ -206,10 +199,6 @@
                     <div class="form-group mx-auto text-center" style="width: 350px;">
                         <label for="Email" class="col-form-label"><b>Почта</b></label>
                         <input type="text" class="form-control" id="Email" name="email">
-                    </div>
-                    <div class="form-group mx-auto text-center" style="width: 350px;">
-                        <label for="Username" class="col-form-label"><b>Логин</b></label>
-                        <input type="text" class="form-control" id="Username">
                     </div>
                     <div class="form-group mx-auto text-center" style="width: 350px;">
                         <label for="Password" class="col-form-label"><b>Пароль</b></label>
@@ -279,10 +268,6 @@
                         <label for="delEmail" class="col-form-label"><b>Почта</b></label>
                         <input type="text" class="form-control" id="delEmail"
                                name="email" readonly>
-                    </div>
-                    <div class="form-group mx-auto text-center" style="width: 350px;">
-                        <label for="delUsername" class="col-form-label"><b>Логин</b></label>
-                        <input type="text" class="form-control" id="delUsername" readonly>
                     </div>
                     <div class="form-group mx-auto text-center" style="width: 350px;">
                         <label for="delPassword" class="col-form-label"><b>Пароль</b></label>
