--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -113,7 +113,7 @@
                                     </div>
                                     <div class="form-group mx-auto" style="width: 350px;">
                                         <div class="text-center"><label for="rolesNew"><b>Права</b></label></div>
-                                        <select class="custom-select" size="2" name="select_role" id="rolesNew">
+                                        <select class="custom-select roleForNew" size="2" name="select_role" id="rolesNew">
                                             <option value="admin">ADMIN</option>
                                             <option value="user">USER</option>
                                         </select>
@@ -207,9 +207,9 @@
                     <div class="mx-auto" style="width: 350px;">
                         <div class="text-center"><label for="roles"><b>Права</b></label>
                         </div>
-                        <select class="custom-select" size="2" name="select_role" id="roles">
-                            <option value="1">ADMIN</option>
-                            <option value="2">USER</option>
+                        <select class="custom-select roleEditNew" size="2" name="select_role" id="roles">
+                            <option value="admin">ADMIN</option>
+                            <option value="user">USER</option>
                         </select>
                     </div>
                 </div>
