add dynamic attribute 'selected' in edit/delete modals

--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -207,7 +207,7 @@
                     <div class="mx-auto" style="width: 350px;">
                         <div class="text-center"><label for="roles"><b>Права</b></label>
                         </div>
-                        <select class="custom-select roleEditNew" size="2" name="select_role" id="roles">
+                        <select class="custom-select roleForEdit" size="2" name="select_role" id="roles">
                             <option value="admin">ADMIN</option>
                             <option value="user">USER</option>
                         </select>
@@ -277,10 +277,10 @@
                         <div class="text-center"><label for="delRoles"><b>Права</b></label>
                         </div>
                         <fieldset disabled>
-                            <select class="custom-select" size="2" name="select_role"
+                            <select class="custom-select roleForDel" size="2" name="select_role"
                                     id="delRoles">
-                                <option value="1">ADMIN</option>
-                                <option value="2">USER</option>
+                                <option value="admin">ADMIN</option>
+                                <option value="user">USER</option>
                             </select>
                         </fieldset>
                     </div>
