--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,7 +14,7 @@
     <div class="col text-white ml-3 mt-2" style="font-size: 15pt;">
         <span class="font-weight-bold" th:text="${#authentication.getName()}" id="principal"></span>
         <span class="ms-1"> с правами доступа:</span>
-        <span></span>
+        <span class="roleOfUser"></span>
     </div>
     <div class="col text-right mr-3 mt-3"><a class="text-white-50" href="/logout">Logout</a>
     </div>
@@ -21,17 +22,17 @@
 <div class="row">
     <div class="col-2 bg-white mt-3">
         <ul class="nav nav-pills flex-column" role="tablist">
-            <li class="nav-item">
-                <a class="nav-link leftNav active" role="tab" href="#adminPanel">Администратор</a>
+            <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
+                <a class="nav-link leftNav" role="tab" href="#adminPanel">Администратор</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link leftNav" role="tab" href="#userPanel">Пользователь</a>
+                <a class="nav-link leftNav active" role="tab" href="#userPanel">Пользователь</a>
             </li>
         </ul>
     </div>
     <div class="col bg-light mt-3">
-        <div class="tab-content">
-            <div role="tabpanel" class="tab-pane pillAdmin active" id="adminPanel">
+        <div class="tab-content" >
+            <div role="tabpanel" class="tab-pane pillAdmin" id="adminPanel">
                 <h2>Панель администратора</h2>
                 <nav>
                     <ul class="nav nav-tabs mt-3" role="tablist">
@@ -129,7 +130,7 @@
                     </div>
                 </div>
             </div>
-            <div role="tabpanel" class="tab-pane pillUser" id="userPanel">
+            <div role="tabpanel" class="tab-pane active pillUser" id="userPanel">
                 <h2>Информация о пользователе</h2>
                 <div class="card">
                     <div class="card-header">
